# FF7_OpenGL

./: .appveyor.yml  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  build.sh  crashdump.h  ctx.c  externals_102_de.h  externals_102_fr.h  ff7.h  ff7_data.h  ff8.h  ff8_data.h  gl.h  globals.h  log.h  macro.h  matrix.h  movies.h  music.c  music.h  patch.c  png.c  png.h  saveload.h
cmake/: FindFFMPEG.cmake  FindGLEW.cmake  FindPNG.cmake  FindVGMSTREAM.cmake  FindX264.cmake  FindZLib.cmake
ff7/: CMakeLists.txt  file.c  graphics.c
ff7_opengl/: CMakeLists.txt
ff7_opengl/cmake/: FindGLEW.cmake
ff7_opengl/src/: CMakeLists.txt  cfg.c  cfg.h  common.h  fake_dd.c  fake_dd.h  log.c  patch.h
ff7_opengl/src/ff7/: defs.h  loaders.c
gl/: CMakeLists.txt  gl.c  special_case.c
misc/: ff7_opengl.cfg  ff7_opengl.reg  ff7_opengl_DEBUG.cfg  ff7_opengl_RELEASE.cfg
src/: CMakeLists.txt  cfg.c  cfg.h  common.c  common.h  common_imports.h  compile_cfg.h  crashdump.c  crashdump.h  ctx.c  ctx.h  externals_102_sp.h  externals_102_us.h  ff7.h  ff7_data.h  ff7_opengl.c  ff8_opengl.c  globals.h  log.c  log.h  macro.h  matrix.c  movies.c  movies.h  png.c  png.h  pngcustom.c  pngcustom.h  saveload.c  types.h
src/ff7/: CMakeLists.txt  battle.c  defs.h  field.c  file.c  graphics.c  loaders.c  misc.c
src/ff7music/: CMakeLists.txt  music.c
src/ffmpeg_movies/: CMakeLists.txt  ffmpeg_glue.c  ffmpeg_movies.c
src/gl/: CMakeLists.txt  deferred.c  gl.c  shader.c  special_case.c  texture.c
src/vgmstream_music/: CMakeLists.txt  music.c
